--- a/weldx/schemas/weldx.bam.de/weldx/core/time_series-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/time_series-0.1.0.yaml
@@ -13,7 +13,7 @@ examples:
     - A time_series describing a constant value in time.
     - |
       !<asdf://weldx.bam.de/weldx/tags/core/time_series-0.1.0>
-        unit: millimeter / second
+        units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm / s
         value: 10.0
   -
     - A time_series describing a sine oscillation in 3d space along the z-axis
@@ -32,7 +32,7 @@ examples:
             b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.0, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
             o: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 4.934802200544679, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> Hz * rad}
             p: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> radian}
-        unit: millimeter
+        units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm
         shape: [1, 3]
 
 oneOf:
