--- a/weldx/schemas/weldx.bam.de/weldx/measurement/source-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/measurement/source-0.1.0.yaml
@@ -14,7 +14,7 @@ examples:
         name: Current Sensor
         output_signal: !<asdf://weldx.bam.de/weldx/tags/measurement/signal-0.1.0>
           signal_type: analog
-          unit: V
+          units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> V
         error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-0.1.0>
           deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.1, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> '%'}
 
