--- a/.github/workflows/unit_test_results.yml
+++ b/.github/workflows/unit_test_results.yml
@@ -10,9 +10,10 @@ jobs:
   unit-test-results:
     name: Unit Test Results
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion != 'skipped'
 
     steps:
+      - run: git branch
+      - run: env
       - name: Download and Extract Artifacts
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
