--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,8 +18,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        py: ['3.8', '3.9']
+        os: [ubuntu-latest]
+        py: ['3.8', '3.9', '3.10']
     steps:
       - uses: actions/checkout@v2
         with:
@@ -29,65 +29,41 @@ jobs:
           python-version: ${{ matrix.py }}
 
       - uses: actions/cache@v2
-        if: startsWith(runner.os, 'Linux')
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('setup.cfg') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - uses: actions/cache@v2
-        if: startsWith(runner.os, 'macOS')
-        with:
-          path: ~/Library/Caches/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('setup.cfg') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - uses: actions/cache@v2
-        if: startsWith(runner.os, 'Windows')
-        with:
-          path: ~\AppData\Local\pip\Cache
-          key: ${{ runner.os }}-pip-${{ hashFiles('setup.cfg') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
       - name: pip installs
-        if: ((matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')) || (github.event.pull_request.draft == false) || (github.ref == 'refs/heads/master')
         run: |
           pip install wheel
           pip install -e .[test]
 
-      - name: setup matplotlib
-        if: startsWith(runner.os, 'Windows') && ((github.event.pull_request.draft == false) || (github.ref == 'refs/heads/master'))
-        run: |
-            if not exist %userprofile%\.matplotlib\ ( mkdir %userprofile%\.matplotlib\ )
-            echo backend: Agg > %userprofile%\.matplotlib\matplotlibrc
-            python -c "import matplotlib as m; print(m.matplotlib_fname())"
-            python -c "import matplotlib as m; print(m.rc_params()['backend'])"
-        shell: cmd
-
       - name: run pytest
-        if: ((matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')) || (github.event.pull_request.draft == false) || (github.ref == 'refs/heads/master')
         run: |
-          pytest -n 2 --runslow
-          echo "Exited with '$?'"
+          pytest -n 2 --runslow --junit-xml pytest.xml
+
+      - name: Publish Unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
+        with:
+          files: pytest.xml
 
       - name: run pytest on notebooks (append coverage)
-        if: (matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')
+        if: matrix.py == '3.8'
         run: |
           pytest -n 2 --dist loadfile --nbval --current-env --cov-append tutorials/
-          echo "Exited with '$?'"
 
       - name: test with WeldxFile
-        if: (matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')
+        if: matrix.py == '3.8'
         run: |
           pytest -n 2  --weldx-file-rw-buffer --weldx-file-rw-buffer-disp-header --cov-append ./weldx/tests/asdf_tests
 
       - name: coverage xml (combination is performed by pytest-cov)
-        if: (matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')
+        if: matrix.py == '3.8'
         run: coverage xml
 
       - name: codecov.io
-        if: (matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')
+        if: matrix.py == '3.8'
         uses: codecov/codecov-action@v1
