--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -45,7 +45,7 @@ jobs:
           pytest -n 2 --runslow --junit-xml pytest.xml
 
       - name: Upload Test Results
-        if: always()
+        if: always() && (matrix.py == '3.8')
         uses: actions/upload-artifact@v2
         with:
           name: Unit Test Results
