--- a/.github/workflows/static_analysis.yml
+++ b/.github/workflows/static_analysis.yml
@@ -74,3 +74,11 @@ jobs:
         uses: pre-commit/action@v2.0.3
         with:
           extra_args: --all-files --show-diff-on-failure
+
+  check-notebooks:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Check notebooks
+        uses: ResearchSoftwareActions/EnsureCleanNotebooksAction@1.1
