--- a/devtools/conda.recipe/meta.yaml
+++ b/devtools/conda.recipe/meta.yaml
@@ -19,9 +19,9 @@ requirements:
   build:
     - pip
     - setuptools_scm
-    - python >=3.8
+    - python >=3.8,<3.10
   run:
-    - python >=3.8
+    - python >=3.8,<3.10
     # dependencies are defined in setup.py
     {% for dep in data['install_requires'] %}
     - {{ dep.lower() }}
